Fixed image not showing on gh pages.

--- a/lumberSite/src/About.css
+++ b/lumberSite/src/About.css
@@ -15,7 +15,8 @@
     width: 90%;
     border-radius: 8px;
     border: 3px solid #886330;
-    box-shadow:  5px #5B3B1E;
+    box-shadow: 5px 10px 8px #5B3B1E;
+
     transition: transform 0.3s ease-in-out; /* Smooth transition effect */
     }
   }
