--- a/lumberSite/src/Header.css
+++ b/lumberSite/src/Header.css
@@ -1,19 +1,28 @@
 .header {
-    position: relative;
-    height: 50vh;
-    background-image: url('./pexels-fwstudio-33348-172289.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    padding: 20px 20px;
-    border-bottom: 2px solid #886330;
+  position: relative;
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  padding: 20px;
+  border-bottom: 2px solid #886330;
+  overflow: hidden; /* Ensure content doesn't overflow */
+
+  /* Ensuring the image doesn't overflow */
+  img {
+      position: absolute;
+      height: 100%; /* Cover the height of the container */
+      width: auto; /* Maintain aspect ratio */
+      z-index: -1; /* Put the image behind the content */
+      object-fit: cover; /* Cover the container while maintaining aspect ratio */
+      width: 100vw;
   }
-  
+}
   .header-content {
     position: relative;
     z-index: 1;
@@ -26,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 25, 10, 0.5);
+    background-color: rgba(46, 25, 10, 0.377);
     z-index: 0;
   }
   
